; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_trantcp.c_nb_upcall.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_trantcp.c_nb_upcall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.nbpcb = type { i32* }

@SU_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, i8*, i32)* @nb_upcall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nb_upcall(%struct.socket* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.socket*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.nbpcb*, align 8
  store %struct.socket* %0, %struct.socket** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.nbpcb*
  store %struct.nbpcb* %10, %struct.nbpcb** %8, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %18, label %13

13:                                               ; preds = %3
  %14 = load %struct.nbpcb*, %struct.nbpcb** %8, align 8
  %15 = getelementptr inbounds %struct.nbpcb, %struct.nbpcb* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %13, %3
  %19 = load i32, i32* @SU_OK, align 4
  store i32 %19, i32* %4, align 4
  br label %26

20:                                               ; preds = %13
  %21 = load %struct.nbpcb*, %struct.nbpcb** %8, align 8
  %22 = getelementptr inbounds %struct.nbpcb, %struct.nbpcb* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @wakeup(i32* %23)
  %25 = load i32, i32* @SU_OK, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %20, %18
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @wakeup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
